# mvibe

./: README.md  pyproject.toml
commands/: mvibe-off.md  mvibe-on.md  mvibe-status.md
mvibe/: __init__.py  _avibe.py  _tls.py  bridge.py  cli.py  config.py  paths.py  prompt_detect.py  prompt_rules.json  tailer.py  wechat_in.py  wechat_login.py  wechat_out.py  wrapper.py
mvibe/ilink/: __init__.py  wechat_api.py  wechat_auth.py
scripts/: smoke.sh
tests/: test_prompt_detect.py
