[project]
name = "mvibe"
version = "0.1.0"
description = "Mirror a local Claude Code TUI to a remote chat (WeChat). Local stays identical; remote takes over I/O via a flag file."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "pyte>=0.8.2",
    "segno>=1.6",
]

[project.scripts]
mvibe = "mvibe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mvibe"]
artifacts = ["mvibe/prompt_rules.json"]

[tool.ruff]
line-length = 100
extend-exclude = ["mvibe/ilink"]  # vendored upstream iLink code
